final website portfolio design

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
         <h3>Web Designer</h3>
         <hr noshade>
         <ul class="side-nav">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#services">Services</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
@@ -29,17 +28,115 @@
           <div class="small-3 columns">
             <img id="john" src="pics/JohnSorrento.jpg">
           </div>
-          <div class="small-6 columns left">
+          <div class="small-6 columns left panel callout radius blurb">
             <h3>Hi I am John.<br> I cook,<br> I bake,<br> and I program Websites.</h3>
           </div> 
         </div> 
+        <!--Start of Portfolio-->
         <div class="row">
-          <div class="small-9 columns">
+          <div id="portfolio" class="small-9 columns">
             <br><br>
-            <h3>Here is my Portfolio<h3>
+            <h2 class="center">Portfolio<h2>
+            <br>
           </div>
         </div>
-      </div>
+        <div class="row">
+          <div class="small-3 columns">
+            <a href="http://johnpmitsch.github.io/coffee" target="blank" class="th">
+              <img src="pics/joescoffeethumb.png" alt="joe's coffee" />
+            </a>
+          </div>
+          <div class="small-6 left columns panel">
+            <a href="http://johnpmitsch.github.io/coffee" target="blank"><h3>Joe's Coffee</a><br><small>Example Website</small></h3>
+            <p>A mock website I created to show a typical design for a small business. This is just for example purposes, all websites are made <i>a la carte</i> to your specifications.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-3 columns">
+            <a href="http://www.waldenbread.wordpress.com" target="blank" class="th">
+              <img src="pics/waldenbreadthumb.png" alt="Walden Bread" />
+            </a>
+          </div>
+          <div class="small-6 left columns panel">
+            <a href="http://www.waldenbread.wordpress.com" target="blank"><h3>Walden Bread</a><br><small>Blog</small></h3>
+            <p>A blog about artisan bread baking</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-3 columns">
+            <a href="http://johnpmitsch.github.io/mappedOut/mappedOut.html" target="blank" class="th">
+              <img src="pics/mappedOutthumb.png" alt="Mapped Out" />
+            </a>
+          </div>
+          <div class="small-6 left columns panel">
+            <a href="http://johnpmitsch.github.io/mappedOut/mappedOut.html" target="blank"><h3>Mapped Out</a><br><small>Web App</small></h3>
+            <p>Search for instagram hashtags around the world</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-3 columns">
+            <a href="http://johnpmitsch.github.io/ShoppingList/index.html" target="blank" class="th">
+              <img src="pics/shoppinglistthumb.png" alt="Shopping List" />
+            </a>
+          </div>
+          <div class="small-6 left columns panel">
+            <a href="http://johnpmitsch.github.io/ShoppingList/index.html" target="blank"><h3>Shopping List</a><br><small>Web App</small></h3>
+            <p>Basic shopping list app</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-3 columns">
+            <a href="http://johnpmitsch.github.io/HotOrCold/index.html" target="blank" class="th">
+              <img src="pics/hotorcoldthumb.png" alt="hot or cold" />
+            </a>
+          </div>
+          <div class="small-6 left columns panel">
+            <a href="http://johnpmitsch.github.io/HotOrCold/index.html" target="blank"><h3>Hot or Cold</a><br><small>Game</small></h3>
+            <p>Guess a number between 1 and 100!</p>
+          </div>
+        </div>
+        <!--End of Portfolio-->
+        <!--Start of Services-->
+        <div class="row">
+          <div id="services" class="small-9 columns">
+            <br><br>
+            <h2 class="center">Services<h2>
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-9 columns panel">
+            <p>I create engaging and interactive websites. </p>
+            <ul>
+              <li><b>Website Creation</b>- Company, Personal, Blogs, Portfolios, Groups</li>
+              <li><b>Responsive Design</b>- Websites that are designed to work on different devices and different browsers</li>
+              <li><b>Hosting</b>- find hosting for your website</li>
+              <li><b>Domain registration</b>- Get your own personal website URL</li>
+              <li><b>Backup and maintenance</b>- I maintain and backup the website for you.</li>
+              <li><b>Full service hospitality and flexibility</b>- My top priority is to make sure that you are happy with your website and the way it functions.</li>
+              <li><b>Social Media</b>- Need help with social media? I can create social media profiles for you.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-9 columns panel">
+            <p><b>Languages and tools used</b></p>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Javascript</li>
+              <li>jQuery</li>
+              <li>JSON</li>
+              <li>API's (google maps, instagram, twitter, etc... provide real-time updates from your social media feeds on your website.)</li>
+            </ul>  
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-9 columns small-centered">
+            <a mailto="johnpmitsch@gmail.com" class="small radius button">johnpmitsch@gmail.com</a>
+          </div>
+        </div>
+    </div>
   </body>
   </html>  
 
