--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <script src="js/modernizr.js"></script>
   </head>
   <body>
-      <div id="bread" class="small-2 large-3 columns">
+      <div class="show-for-small-only small-12 columns center">
+        <h2><strong>John Mitsch</strong></h2>
+        <h3><strong>Web Designer</strong></h3>
+        <hr>
+      </div>
+      <div id="bread" class="hide-for-small-only small-2 medium-3 columns">
         <br>
         <h2>John Mitsch</h2>
         <h3>Web Designer</h3>
@@ -20,77 +25,77 @@
         <ul class="side-nav">
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#contact" data-reveal-id="myModal">Contact</a></li>
         </ul>
       </div>
-      <div class="small-9 columns container">
+      <div class="small-12 medium-9 columns container">
         <div class="row">
-          <div class="small-3 columns">
+          <div class="small-4 medium-3 columns">
             <img id="john" src="pics/JohnSorrento.jpg">
           </div>
-          <div class="small-6 columns left panel callout radius blurb">
+          <div class="small-8 medium-6 columns left panel callout radius blurb">
             <h3>Hi I am John.<br> I cook,<br> I bake,<br> and I program Websites.</h3>
           </div> 
         </div> 
         <!--Start of Portfolio-->
         <div class="row">
-          <div id="portfolio" class="small-9 columns">
-            <br><br>
+          <div id="portfolio" class="small-12 medium-9 columns">
+            <br><br><br>
             <h2 class="center">Portfolio<h2>
             <br>
           </div>
         </div>
         <div class="row">
-          <div class="small-3 columns">
+          <div class="small-4 medium-3 columns">
             <a href="http://johnpmitsch.github.io/coffee" target="blank" class="th">
               <img src="pics/joescoffeethumb.png" alt="joe's coffee" />
             </a>
           </div>
-          <div class="small-6 left columns panel">
+          <div class="small-8 medium-6 left columns panel">
             <a href="http://johnpmitsch.github.io/coffee" target="blank"><h3>Joe's Coffee</a><br><small>Example Website</small></h3>
             <p>A mock website I created to show a typical design for a small business. This is just for example purposes, all websites are made <i>a la carte</i> to your specifications.</p>
           </div>
         </div>
         <div class="row">
-          <div class="small-3 columns">
+          <div class="small-4 medium-3 columns">
             <a href="http://www.waldenbread.wordpress.com" target="blank" class="th">
               <img src="pics/waldenbreadthumb.png" alt="Walden Bread" />
             </a>
           </div>
-          <div class="small-6 left columns panel">
+          <div class="small-8 medium-6 left columns panel">
             <a href="http://www.waldenbread.wordpress.com" target="blank"><h3>Walden Bread</a><br><small>Blog</small></h3>
             <p>A blog about artisan bread baking</p>
           </div>
         </div>
         <div class="row">
-          <div class="small-3 columns">
+          <div class="small-4 medium-3 columns">
             <a href="http://johnpmitsch.github.io/mappedOut/mappedOut.html" target="blank" class="th">
               <img src="pics/mappedOutthumb.png" alt="Mapped Out" />
             </a>
           </div>
-          <div class="small-6 left columns panel">
+          <div class="small-8 medium-6 left columns panel">
             <a href="http://johnpmitsch.github.io/mappedOut/mappedOut.html" target="blank"><h3>Mapped Out</a><br><small>Web App</small></h3>
             <p>Search for instagram hashtags around the world</p>
           </div>
         </div>
         <div class="row">
-          <div class="small-3 columns">
+          <div class="small-4 medium-3 columns">
             <a href="http://johnpmitsch.github.io/ShoppingList/index.html" target="blank" class="th">
               <img src="pics/shoppinglistthumb.png" alt="Shopping List" />
             </a>
           </div>
-          <div class="small-6 left columns panel">
+          <div class="small-8 medium-6 left columns panel">
             <a href="http://johnpmitsch.github.io/ShoppingList/index.html" target="blank"><h3>Shopping List</a><br><small>Web App</small></h3>
             <p>Basic shopping list app</p>
           </div>
         </div>
         <div class="row">
-          <div class="small-3 columns">
+          <div class="small-4 medium-3 columns">
             <a href="http://johnpmitsch.github.io/HotOrCold/index.html" target="blank" class="th">
               <img src="pics/hotorcoldthumb.png" alt="hot or cold" />
             </a>
           </div>
-          <div class="small-6 left columns panel">
+          <div class="small-8 medium-6 left columns panel">
             <a href="http://johnpmitsch.github.io/HotOrCold/index.html" target="blank"><h3>Hot or Cold</a><br><small>Game</small></h3>
             <p>Guess a number between 1 and 100!</p>
           </div>
@@ -98,14 +103,14 @@
         <!--End of Portfolio-->
         <!--Start of Services-->
         <div class="row">
-          <div id="services" class="small-9 columns">
+          <div id="services" class="small-12 medium-9 columns">
             <br><br>
             <h2 class="center">Services<h2>
             <br>
           </div>
         </div>
         <div class="row">
-          <div class="small-9 columns panel">
+          <div class="small-12 medium-9 columns panel">
             <p>I create engaging and interactive websites. </p>
             <ul>
               <li><b>Website Creation</b>- Company, Personal, Blogs, Portfolios, Groups</li>
@@ -119,7 +124,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="small-9 columns panel">
+          <div class="small-12 medium-9 columns panel">
             <p><b>Languages and tools used</b></p>
             <ul>
               <li>HTML</li>
@@ -131,9 +136,9 @@
             </ul>  
           </div>
         </div>
-        <div class="row">
-          <div class="small-9 columns small-centered">
-            <a mailto="johnpmitsch@gmail.com" class="small radius button">johnpmitsch@gmail.com</a>
+        <div id = "contact" class="row">
+          <div class="small-4 columns small-offset-3">
+            <a href="mailto:johnpmitsch@gmail.com" class="small radius button">johnpmitsch@gmail.com</a>
           </div>
         </div>
     </div>
