added title to small size

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <script src="js/modernizr.js"></script>
   </head>
   <body>
-      <div class="show-for-small-only small-12 columns center">
-        <h2><strong>John Mitsch</strong></h2>
-        <h3><strong>Web Designer</strong></h3>
-        <hr>
+      <div class=" show-for-small-only small-12 small-centered columns center">
+        <h1>John Mitsch</h1>
+        <h3>Web Designer</h3><hr>
       </div>
       <div id="bread" class="hide-for-small-only small-2 medium-3 columns">
         <br>
@@ -53,7 +52,7 @@
           </div>
           <div class="small-8 medium-6 left columns panel">
             <a href="http://johnpmitsch.github.io/coffee" target="blank"><h3>Joe's Coffee</a><br><small>Example Website</small></h3>
-            <p>A mock website I created to show a typical design for a small business. This is just for example purposes, all websites are made <i>a la carte</i> to your specifications.</p>
+            <p>A mock website I created to show a typical design for a small business.</p>
           </div>
         </div>
         <div class="row">
