changed some wording

--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
             <p>I create engaging and interactive websites. </p>
             <ul>
               <li><b>Website Creation</b>- Company, Personal, Blogs, Portfolios, Groups</li>
-              <li><b>Responsive Design</b>- Websites that are designed to work on different devices and different browsers</li>
-              <li><b>Hosting</b>- find hosting for your website</li>
-              <li><b>Domain registration</b>- Get your own personal website URL</li>
-              <li><b>Backup and maintenance</b>- I maintain and backup the website for you.</li>
-              <li><b>Full service hospitality and flexibility</b>- My top priority is to make sure that you are happy with your website and the way it functions.</li>
-              <li><b>Social Media</b>- Need help with social media? I can create social media profiles for you.</li>
+              <li><b>Responsive Design</b>- Websites that are designed to work on different devices and browsers</li>
+              <li><b>Hosting</b>- Find hosting for your website</li>
+              <li><b>Domain Registration</b>- Your own personal URL</li>
+              <li><b>Backup and maintenance</b>- I maintain and backup the website for you</li>
+              <li><b>Social Media</b>- Need help with social media? I can create social media profiles for you</li>
+              <li><b>Full service hospitality and flexibility</b>- My top priority is to make sure that you are happy with your website and the way it functions</li>
             </ul>
           </div>
         </div>
